# rust-portfolio-opt

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: black_litterman.rs  cla.rs  discrete_allocation.rs  efficient_frontier.rs  expected_returns.rs  hrp.rs  lib.rs  prelude.rs  qp.rs  risk_models.rs
