[package]
name = "rust-portfolio-opt"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Dave Foran <dave@redsunis.com>"]
description = "Pure-Rust port of PyPortfolioOpt: expected returns, risk models, mean-variance optimisation, Black-Litterman, hierarchical risk parity, the Critical Line Algorithm, and discrete allocation."
license = "MIT"
repository = "https://github.com/DaveForan/rust-portfolio-opt"
homepage = "https://github.com/DaveForan/rust-portfolio-opt"
documentation = "https://docs.rs/rust-portfolio-opt"
readme = "README.md"
keywords = ["portfolio", "finance", "optimization", "markowitz", "quant"]
categories = ["mathematics", "finance"]
exclude = [
    ".github/",
    "target/",
    "*.profraw",
    "flamegraph.svg",
]

[dependencies]
nalgebra = "0.33"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
